[package]
name = "aiotar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.62"
reqwest = "0.11"
tar = "0.4"
redis = { version = "0.22", features = ["aio", "tokio", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }