[package]
name = "example-worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aiotar = { path = "../../" }
redis = { version = "0.22", features = ["aio", "tokio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"